--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Parks Finder</title>
+    <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>"foo bar"</p>
+    <div class="container">
+        <h1>National Park Service Park Finder</h1>
+
+        <form id="js-form">
+            <label for="search-term">Search a State</label>
+            <input type="text" name="search-term" id="js-search-term" required>
+
+            <label for="max-results">Maximum Results</label>
+            <input type="number" name="max-results" id="js-max-results" value="10">
+
+            <input type="submit" value="Submit">
+        </form>
+
+        <p id="js-error-message" class="error-message"></p>
+        <section id="results" class="hidden">
+          <h2>Search Results</h2>
+          <ul id="results-list">
+          </ul>
+        </section>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
