--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         <form id="js-form">
             <label for="search-term">Search a State</label>
-            <input type="text" name="search-term" id="js-search-term" required>
+            <input type="text" name="search-term" id="search-term" placeholder="California" required>
 
-            <label for="max-results">Maximum Results</label>
-            <input type="number" name="max-results" id="js-max-results" value="10">
+            <label for="results">Number of Results</label>
+            <input type="number" name="results" id="results" value="10">
 
             <input type="submit" value="Submit">
         </form>
