--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
 
         <p id="js-error-message" class="error-message"></p>
-        <section id="results" class="hidden">
+        <section id="search-results" class="hidden">
           <h2>Search Results</h2>
           <ul id="results-list">
           </ul>
