Final Final revision

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <form id="js-form">
             <label for="search-term">Search a State</label>
-            <input type="text" name="search-term" id="search-term" placeholder="California" required>
+            <input type="text" name="search-term" id="search-term" placeholder="e.g. CA,VA,AZ" required>
 
             <label for="results">Number of Results</label>
             <input type="number" name="results" id="results" value="10">
